--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
-                        url('https://images.unsplash.com/photo-1581092160562-40aa08e78837?auto=format&fit=crop&w=1350&q=80');
+                        url('20260117_164708.jpg');
             background-size: cover;
             background-position: center;
             height: 400px;
