--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thế Giới In 3D - Công Nghệ Tương Lai</title>
+    <title>Print 3D and print documents </title>
     <style>
         /* CSS Reset và Style cơ bản */
         body {
@@ -35,7 +35,7 @@
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
-                        url('20260117_164708.jpg');
+                        url('');
             background-size: cover;
             background-position: center;
             height: 400px;
@@ -149,3 +149,4 @@
 
 </body>
 </html>
+
