--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
-                        url('');
+                        <img src="20260117_164708.jpg" alt="Mô hình khủng long in 3D" style="width:100%; max-width:500px; border-radius:10px;">
             background-size: cover;
             background-position: center;
             height: 400px;
@@ -149,4 +149,5 @@
 
 </body>
 </html>
+
 
