--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
-                        url('https://images.unsplash.com/photo-1581092160562-40aa08e78837?auto=format&fit=crop&w=1350&q=80');
+                        url('file:///C:/Users/admin/OneDrive/Pictures/rex.jpg');
             background-size: cover;
             background-position: center;
             height: 400px;
@@ -134,7 +134,7 @@
         <section id="gallery" style="background: #fff; padding: 30px; border-radius: 12px; margin: 20px 0; box-shadow: 0 4px 15px rgba(0,0,0,0.05);">
             <h2 style="text-align: center; color: #2c3e50;">Sản Phẩm Thực Tế</h2>
             <div style="text-align: center;">
-                <img src="rex.jpg" alt="Khủng long Flexi T-Rex" style="width:100%; max-width:500px; border: 8px solid #fff; box-shadow: 0 10px 25px rgba(0,0,0,0.2); border-radius: 15px;">
+                <img src="rex.jpg" alt="rex" style="width:100%; max-width:500px; border: 8px solid #fff; box-shadow: 0 10px 25px rgba(0,0,0,0.2); border-radius: 15px;">
                 <p style="margin-top: 15px; font-size: 1.1rem; color: #555;">
                     <i>Mô hình <b>Flexi T-Rex</b> in bằng công nghệ FDM. Các khớp nối được in trực tiếp cùng lúc mà không cần lắp ráp!</i>
                 </p>
@@ -158,6 +158,7 @@
 
 </body>
 </html>
+
 
 
 
