--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), 
-                        url('file:///C:/Users/admin/OneDrive/Pictures/rex.jpg');
+                        url('https://images.unsplash.com/photo-1581092160562-40aa08e78837?auto=format&fit=crop&w=1350&q=80');
             background-size: cover;
             background-position: center;
             height: 400px;
@@ -158,6 +158,7 @@
 
 </body>
 </html>
+
 
 
 
